# ProteinMutualInformation

./: .gitignore  INFO3-Questions.txt  INFO3-Questions.txt~  README.md  project_functionnalities.txt
source/: CMakeLists.txt  Makefile  gAPP.cpp  information  main.cpp  makefile  protein_information  res.txt
source/DataManaging/: ConcreteStream.cpp  ConcreteStream.hpp  DataManager.cpp  DataManager.hpp  FileDataReader.cpp  FileDataReader.hpp  FileDataWriter.cpp  FileDataWriter.hpp  InputDataManager.cpp  InputDataManager.hpp  Stream.cpp  Stream.hpp  StreamManager.cpp  StreamManager.hpp  main.cpp  makefile  manager
source/Main/: MainMenu.cpp  MainMenu.hpp  main.cpp  menu
source/communicationdata/: AlgorithmicConstaints.cpp  AlgorithmicConstraints.hpp  ConcreteStream.cpp  ConcreteStream.hpp  Data.hpp
source/constants/: constants.cpp  constants.hpp
source/data/: 2009_data.txt  wasp_data.txt
source/datamanaging/: ConcreteStream.hpp  FileDataReader.cpp  FileDataWriter.cpp  FileDataWriter.hpp  Stream.hpp
source/exceptions/: GSLDivergenceException.cpp  GSLDivergenceException.hpp  WrongInputDataException.cpp  WrongInputDataException.hpp
source/facades/: DataManager.cpp  DataManager.hpp  Facade.cpp  Facade.hpp  IOManager.cpp  IOManager.hpp  InformationCalculator.cpp  InformationCalculator.hpp  ProteinData.cpp  ProteinData.hpp  UI.cpp  UI.hpp
source/gnuplot/: Plotter.cpp  Plotter.hpp  gnuplot_i.cpp  gnuplot_i.hpp
source/io/: FileDataReader.cpp  FileDataReader.hpp  FileDataWriter.cpp  FileDataWriter.hpp  InputDataManager.cpp  InputDataManager.hpp  Stream.cpp  Stream.hpp  makefile
source/mediators/: InformationProcessDirector.cpp  InformationProcessDirector.hpp  MainProcessDirector.cpp  MainProcessDirector.hpp  MainProcessMediator.cpp  MainProcessMediator.hpp  ProcessDirector.hpp  ProcessMediator.hpp
source/octave/: OctaveRootFinder.cpp  OctaveRootFinder.hpp  (+1 more)
(+141 files in other folders)
